fix panel overflow issue

--- a/src/components/GameOver/GameOver.module.scss
+++ b/src/components/GameOver/GameOver.module.scss
@@ -52,7 +52,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 550px;
+    height: 480px;
 }
 
 .gamePanel {
