--- a/src/components/GameStart/GameStart.module.scss
+++ b/src/components/GameStart/GameStart.module.scss
@@ -53,7 +53,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 550px;
+    height: 480px;
 }
 
 .gamePanel {
